Fix image misalignment

--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -1,5 +1,17 @@
 .gatsby-image-wrapper {
   width: 100%;
   height: 100%;
-  display: block !important;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+
+  & img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+  }
 }
